# go-it-web-hw4

./: Dockerfile  README.md  about_me.json  app.py  index.html  message.html  pyproject.toml  requirements.txt
storage/: data.json
templates/: about_me.html
